# EZSSH

./: CMakeLists.txt  ReadMe.md  main.cpp
JSON_PARSING/: JsonParsing.cpp  JsonParsing.h
LIBSSH_SCP/: Scp.cpp  Scp.h
PARSING_RESPONSE_POST_JSON/: Get_response_post_json.cpp  Get_response_post_json.h
REST_API_GET/: Get.cpp  Get.h
REST_API_POST/: Post.cpp  Post.h
curl_x64-windows/: CONTROL
curl_x64-windows/debug/lib/pkgconfig/: libcurl.pc
curl_x64-windows/share/curl/: vcpkg.spdx.json  vcpkg_abi_info.txt
libssh_x64_windows/: CONTROL
libssh_x64_windows/debug/lib/pkgconfig/: libssh.pc
libssh_x64_windows/lib/pkgconfig/: libssh.pc
libssh_x64_windows/share/libssh/: libssh-config.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
